# untitled-grapple-game

./: .gitignore  CollisionGenerator  OPTIMIZATION_SUMMARY.md  README.md  VALIDATION_CHECKLIST.md  config.js  package-lock.json  package.json  server.js  start.ps1  start.sh
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: Nametags.js  PerformanceMonitor.js  PointerLockControls.js  RankingUtils.js  SkinManager.js  background.js  main.js
client/static/gear/: minecraftMace.glb  sniper.glb
client/static/maps/: orbit.collision.json  orbit.glb  stonelands.collision.json  stonelands.glb  testMap1.collision.json  testMap1.glb
client/static/maps/ffa/: Skylands.glb  skylands.collision.json  testFFA.collision.json
client/static/skins/: default.glb
cpp-server/: CMakeLists.txt  Cargo.toml  build.rs
cpp-server/proto/: game.proto
cpp-server/src/: config.hpp  game_room.cpp  game_room.hpp  game_server.cpp  game_server.hpp  lib.rs  main.cpp  redis_client.cpp  redis_client.hpp  room_manager.cpp  room_manager.hpp  ws_game_server.cpp  ws_game_server.hpp
cpp-server/src/physics/: rapier_world.cpp  rapier_world.hpp
cpp-server/src/systems/: bomb_system.cpp  bomb_system.hpp  gear_system.cpp  gear_system.hpp  grapple_system.cpp  grapple_system.hpp  parry_system.cpp  parry_system.hpp  player_controller.cpp  player_controller.hpp
game/: BombSystem.js  GearRegistry.js  GearSystem.js  GrappleSystem.js  GrpcClient.js  ParrySystem.js  PhysicsWorld.js  PlayerController.js  RedisGameBridge.js
lib/: DiagnosticsLogger.js  RankingUtils.js  SkinCache.js
maps/: index.js
migrations/: README.md  migrateSkinsStructure.js
models/: User.js
public/: index.html
public/assets/: index-BFisUYWK.js  index-Bdp1kXvG.js  index-BfaLUM0z.js  index-BiMlrRSm.js  index-BqkVMSE8.js  index-C0orxyaz.js  index-C6W2Thm0.js  index-CFSOpuQF.js  index-CH45C-hr.js  index-CJ3sUiW6.js  index-CNr8bH_0.js  index-CWXNv2KN.js  index-CeB8wZPq.js  index-ChUzfWRf.js  index-CoMoTp10.js  index-Cq7ueySY.js  index-Cr65uOZC.js  index-DMGVohYB.js  index-DMsCqM-D.js  index-DSum8RF7.js  index-DkIEJTWD.js  index-DmFDDiBQ.js  index-DnovYAjk.js  index-DoaJPCD3.js  index-DqqSmZvu.js  index-DscqR-Vd.js  index-F1c_4L3B.js  index-lZMTkYnC.js  index-riyKa67a.js  index-yBLQRhGO.js
public/gear/: mace.glb
public/maps/ffa/: test_ffa.glb
rooms/: BaseGameRoom.js  FreeForAllRoom.js  Lobby.js  MatchmakingRoom.js  PrivateRoom.js  RankedRoom.js
routes/: gear.js  skins.js
schema/: index.js
skins/: index.js
skins/models/bombs/: c4.glb
skins/models/players/: cube.glb  missingTexture.glb
